--- a/guests/templates/guests/guests.html
+++ b/guests/templates/guests/guests.html
@@ -3,6 +3,8 @@
 {% block extra_title %}Guests{% endblock %}
 
 {% block primary-cta %}
+
+{% if guests %}
 <a href="{% url 'add_guest' %}"
     class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
     <svg xmlns="http://www.w3.org/2000/svg" class="mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -12,6 +14,8 @@
     </svg>
     Add Guest
 </a>
+{% endif %}
+
 {% endblock%}
 
 {% block body %}
